Fri Sep 16 19:22:58 UTC 2011  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/DCPS/SimpleLatency/raw_tcp/publisher/TestDriver.cpp:
        * performance-tests/DCPS/SimpleLatency/raw_tcp/subscriber/TestDriver.cpp:
        * performance-tests/DCPS/SimpleLatency/sample_pub.cpp:
        * performance-tests/DCPS/SimpleLatency/sample_sub.cpp:

          Exclude using mlockall on Android since it is defined but not
          implemented on the platform.

Fri Sep 16 14:31:28 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tests/transport/simple/run_test.pl:

          Use PerlACE::random_port() to get a random port number.

Wed Sep 14 20:49:07 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/tests/MessengerSplit/MessengerSplit.mwc:

          Look in model dir for mpb files.

Mon Sep 12 15:46:12 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/tests/MessengerSplit/MessengerSplit.mpc:

          Use project base to get dependencies.

Mon Sep 12 14:38:32 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * INSTALL:

          Trying to make it clear that the "Compilation on Widnows..."
          paragraph only applies to the android cross-compile.

        * java/build_scripts/generate_javadoc.pl:

          Updated URL for Java SE javadocs, sun.com no longer works.

Thu Sep  8 18:26:40 UTC 2011  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/Definitions.h:

          Change to not define DDS_HAS_WCHAR for android as it is not complete
          on the platform.

Tue Aug 30 17:25:37 UTC 2011  Dean Wette  <wette_d@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.validation/build-external.xml:
        * tools/modeling/plugins/org.opendds.modeling.validation/build.properties:
        * tools/modeling/tests/setup.pl:

          Add supoort to fail fast (default) when ant run.tests taget fails,
          or use -f arg on setup.pl to force the script to keep running.
